favorite-view: not-available item notice let user able to set item visible or invisible let user able to delete item on selling or favorite lists

--- a/src/pages/favorite-view/favorite-view.html
+++ b/src/pages/favorite-view/favorite-view.html
@@ -10,9 +10,10 @@
 
 <ion-content>
  <div *ngFor="let item of favoriteItems; let i = index">
-    <div *ngIf="!IS_REMOVED[i]">
+    <div>
       <ion-card>
-        <ion-item>
+        <div *ngIf="item.isValid">
+          <ion-item>
           <ion-avatar item-left>
             <img src="{{item.AVATAR_URL}}">
           </ion-avatar>
@@ -27,7 +28,7 @@
 
         <ion-card-content>
           <p>{{item.new_KIND}}</p>
-          <div *ngIf="!IS_DETAILED[i]">
+          <div>
             <ion-item>
               <h3>$ {{item.new_PRICE}}</h3>
               <button ion-button outline item-right icon-left (click)="go2Detail(item, item.$key)">
@@ -35,43 +36,6 @@
               </button>
             </ion-item>
           </div>
-          <!--<div *ngIf="IS_DETAILED[i]">
-            <ion-item>
-              <button ion-button color="danger" outline item-right icon-left (click)="showLess(i)">
-                <ion-icon name="ios-arrow-up" padding></ion-icon>
-              </button>
-            </ion-item>
-            <ion-item>
-              <h4>GIÁ:</h4>
-              <ion-icon name="ios-cash-outline" item-left small></ion-icon>
-              <p>{{item.new_PRICE}} VND</p>
-            </ion-item>
-            <ion-item>
-              <ion-icon name="ios-resize-outline" item-left small></ion-icon>
-              <h4>DTSD:</h4>
-              <p>DT sàn: {{item.GROUNDSQUARES}} m2</p>
-              <p>DT sử dụng: {{item.USEDSQUARES}} m2</p>
-            </ion-item>
-            <ion-item>
-              <ion-icon name="ios-locate-outline" item-left small></ion-icon>
-              <h4>TIỆN ÍCH:</h4>
-
-              <p *ngIf="item.hasSCHOOL">Trường học ......{{item.hasSCHOOLFAR}} m</p>
-
-              <p *ngIf="item.hasHOSPITAL">Bệnh viện .........{{item.hasHOSPITALFAR}} m</p>
-
-              <p *ngIf="item.hasMART">Siêu thị .............{{item.hasMARTFAR}} m</p>
-
-              <p *ngIf="item.hasCENTER">Trung tâm .........{{item.hasCENTERFAR}} m</p>
-
-            </ion-item>
-
-            <ion-item>
-              <ion-icon name="ios-home-outline" item-left small></ion-icon>
-              <h4>Address: </h4>
-              <p>{{item.ADDRESS}}</p>
-            </ion-item>
-          </div>-->
         </ion-card-content>
 
         <ion-row>
@@ -93,6 +57,10 @@
             </ion-note>
           </ion-col>
         </ion-row>
+        </div>
+        <div *ngIf="!item.isValid">
+          <img src="{{notAvailable}}" alt="">
+        </div>
         <button ion-button block color="danger" (click)="onDeleteFromFavorite(item.$key,i)">Delete</button>
       </ion-card>
     </div>
