--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -1,6 +1,8 @@
 <ion-header>
-
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>SETTING</ion-title>
   </ion-navbar>
 
