feature: show distance from items to current position of user

--- a/src/pages/items/items.html
+++ b/src/pages/items/items.html
@@ -21,5 +21,6 @@
     </div>
     <div class="card-title">{{item.new_PRICE}} VND</div>
     <div class="card-subtitle">{{item.new_KIND}}</div>
+    <div class="card-distance">{{item.distances.disStr}}</div>
   </ion-card>
 </ion-content>
