--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -31,7 +31,7 @@
     </ion-item>
     <ion-item>
       <ion-label fixed>Email</ion-label>
-      <ion-input type="email" [(ngModel)]="profile.EMAIL" name="EMAIL"></ion-input>
+      <ion-input type="email" [(ngModel)]="profile.EMAIL" name="EMAIL" disabled></ion-input>
     </ion-item>
     <ion-item>
       <ion-label fixed>Birthday</ion-label>
