--- a/src/pages/user-management/user-management.html
+++ b/src/pages/user-management/user-management.html
@@ -13,6 +13,10 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+<ion-list>
+  <ion-item *ngFor="let user of users" (click)="go2UserProfileEdit(user)">
+    {{user.NAME}} - {{user.EMAIL}}
+  </ion-item>
+</ion-list>
 </ion-content>
