--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -161,7 +161,7 @@
       <ion-label>Users Management</ion-label>
       <!--<ion-note item-right>Click for help</ion-note>-->
     </ion-item>
-    <ion-item>
+    <ion-item (click)="go2ItemManagement()">
       <ion-icon name='ios-bulb-outline' item-left></ion-icon>
       <ion-label>Items Management</ion-label>
       <!--<ion-note item-right>Feedbacks are welcome</ion-note>-->
