commit-17: let user call to seller number directly (call number cordova)

--- a/src/pages/show-item-detail/show-item-detail.html
+++ b/src/pages/show-item-detail/show-item-detail.html
@@ -15,7 +15,7 @@
         <img src="{{obj.AVATAR_URL}}">
       </ion-avatar>
       <h2>{{obj.NAME}}</h2>
-      <button ion-button clear (click)="makeCall()">{{obj.PHONE}}</button>
+      <button ion-button clear (click)="makeCall(obj.PHONE)">{{obj.PHONE}}</button>
     
     </ion-item>
     <hr>
