--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
   <!--for google maps javascripts sdk-->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCUtZsAxNcjgGO3w3YX-6GBq8XQKxIHF_A"></script>
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyAf1-QYPFKYvSP4zsgd1rAPgGv_vsEWCzE"></script>
+  <!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyCUtZsAxNcjgGO3w3YX-6GBq8XQKxIHF_A"></script>-->
  
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
