--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -166,6 +166,11 @@
       <ion-label>Items Management</ion-label>
       <!--<ion-note item-right>Feedbacks are welcome</ion-note>-->
     </ion-item>
+    <ion-item (click)="go2FeedbackManagement()">
+      <ion-icon name='ios-bulb-outline' item-left></ion-icon>
+      <ion-label>Feedback Management</ion-label>
+      <!--<ion-note item-right>Feedbacks are welcome</ion-note>-->
+    </ion-item>
   </ion-list>
   </div>
 
