Commit-23: user can ask for support by choosing type of question, sending message to admin

--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -138,7 +138,7 @@
       HELP & FEEDBACK
     </ion-list-header>
 
-    <ion-item>
+    <ion-item (click)="go2SupportPage()">
       <ion-icon name='flash' item-left></ion-icon>
       <ion-label>Contact support</ion-label>
       <!--<ion-note item-right>Click for help</ion-note>-->
