--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -159,22 +159,23 @@
     <ion-item (click)="go2UserManagement()">
       <ion-icon name='flash' item-left></ion-icon>
       <ion-label>Users Management</ion-label>
-      <!--<ion-note item-right>Click for help</ion-note>-->
     </ion-item>
     <ion-item (click)="go2ItemManagement()">
       <ion-icon name='ios-bulb-outline' item-left></ion-icon>
       <ion-label>Items Management</ion-label>
-      <!--<ion-note item-right>Feedbacks are welcome</ion-note>-->
     </ion-item>
     <ion-item (click)="go2FeedbackManagement()">
       <ion-icon name='ios-bulb-outline' item-left></ion-icon>
       <ion-label>Feedback Management</ion-label>
-      <!--<ion-note item-right>Feedbacks are welcome</ion-note>-->
     </ion-item>
     <ion-item (click)="go2SuggestionManager()">
       <ion-icon name='ios-bulb-outline' item-left></ion-icon>
       <ion-label>Suggestion Manager</ion-label>
-      <!--<ion-note item-right>Feedbacks are welcome</ion-note>-->
+    </ion-item>
+
+    <ion-item (click)="go2SupportManager()">
+      <ion-icon name='ios-bulb-outline' item-left></ion-icon>
+      <ion-label>Support Manager</ion-label>
     </ion-item>
   </ion-list>
   </div>
